fix(Portal): APIM-13995 — Role permission are overlapping with environment